resources/css/home-card.css
.home-card {
    --highlight: #ff4433;
    --darkRed: #c04233;
    --textColor: #fff;
    --popup: #24262a;
    --generalBG: #151a257f;
    --lightBorder: #c0c0c2;
    --fullBG: #151a25;
    --yellow: #fbc900;
    --lightBG: #c0c0e00f;
    --redBG: #f040101e;
    text-decoration: none;
    cursor: pointer;
    color: var(--textColor) !important;
    background-position: center;
    background-size: cover;
    display: grid;
    align-items: end;
    align-content: end;
    content: '';
    margin: 0.3em !important;
    border: 1px solid var(--lightBorder);
    background-color: var(--generalBG);
    padding: 0 0 4px 0 !important;
    flex-direction: column;
    overflow: hidden;
    grid-column: 1 !important;
    grid-row: 1 !important;

    width: 300px;
    max-width: 300px;

    aspect-ratio: 3/5;
    height: auto;
    position: relative;
    text-shadow: 1px 1px 2px #000;
}

.card-link {
    all: unset;
}
.card-link,
.home-card {
    transition: all 0.15s cubic-bezier(0.07, 0.95, 0, 1);
    transition-behavior: allow-discrete;
}

.gradient,
.description {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
}
.gradient {
    background: #000000;
    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(255, 75, 60, 1) 100%);
    position: relative;
    top: 5px;
    height: 77px;
    opacity: 0;
    z-index: 2;
}

.home-card.operators {
    background-image: url('recruits.jpg');
}

.home-card.squads {
    background-image: url('board.jpg');
}

.home-card.vocabulary {
    background-image: url('highCalibre.jpg');
}
.home-card.about {
    background-image: url('kaid.jpg');
}

.card-bottom {
    position: relative;
    min-height: 10px;
    transform: scale(0);
    display: none;
    z-index: 1;
}

.card-link:hover .home-card {
    border: 1px solid #ff4b3c;
}

.card-link:hover .card-bottom {
    min-height: 70px;
    transform: scale(1);
    display: grid;
    justify-items: center;
}

.description {
    font-size: 15px;
    z-index: 3;
    height: 100%;
    left: unset;
    display: grid;
    align-items: end;
    width: 95%;
}

.home-card .title {
    text-transform: uppercase;
    font-family: 'GT America', sans-serif;
    font-size: 35px;
    z-index: 3;
}

.card-link:hover .gradient {
    opacity: 0.6;
}

#home-card-container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: 60vw;
    max-width: 1400px;
    height: 60vh;
}

.overlay {
    width: 100%;
    height: 100%;
    z-index: 1;
    box-shadow: 0 0 100px rgba(0, 0, 0, 0.9) inset;
    position: absolute;
    top: 0;
    left: 0;
}

.card-link:hover .overlay {
    box-shadow: 0 0 400px rgba(0, 0, 0, 0.9) inset;
}

@media screen and (max-width: 790px) {
    #home-card-container {
        flex-direction: column;
        width: 100vw;
        height: max-content;
        margin: 0 0 30px 0;
    }

    .home-card {
        width: 200px;
    }
}

